# ccc-map-editor

./: CMakeLists.txt  LICENSE  camera.h  main.cpp  map.h  map_editor.h  obj.h  olcPGEX_Graphics3D.h  olcPGEX_ImageManip.h  pge.cpp
resource/: resource_manager.h  road_skin.cpp  road_skin.h
states/: edit.cpp  edit.h  state.h
